--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Android/Remo/.idea/workspace.xml
 C#/REMOAPP/.vs/RemoApp/v14/.suo
 C#/REMOAPP/Remo/bin/Debug/Remo.vshost.exe.manifest
+Android/Remo/.idea/workspace.xml
