--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Android/Remo/.idea/workspace.xml
 C#/REMOAPP/.vs/RemoApp/v14/.suo
 C#/REMOAPP/Remo/bin/Debug/Remo.vshost.exe.manifest
 Android/Remo/.idea/workspace.xml
+Android/Remo/.idea/workspace.xml
