Core Connection Fixex
add Feature Clients Map to reduce loops

--- a/C#/REMOAPP/Remo/Remo.csproj
+++ b/C#/REMOAPP/Remo/Remo.csproj
@@ -69,8 +69,8 @@
     <Compile Include="Connections\IServer.cs" />
     <Compile Include="Connections\DataHandler.cs" />
     <Compile Include="Connections\IClient.cs" />
-    <Compile Include="Connections\mClient.cs" />
     <Compile Include="Connections\mUDPHandler.cs" />
+    <Compile Include="Connections\MyDictionary.cs" />
     <Compile Include="Features\CamStream.cs">
       <SubType>Form</SubType>
     </Compile>
