--- a/Android/Remo/AndroidManifest.xml
+++ b/Android/Remo/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
 
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
             android:name="com.remo.App"
         android:allowBackup="true"
@@ -40,6 +43,20 @@
             android:name=".Connections.BRConnectivity"
             android:enabled="true"
             android:exported="true"></receiver>
+
+
+        <!--<receiver android:name="co BRDeviceAdmin"-->
+                  <!--android:label="@string/sample_device_admin"-->
+                  <!--android:description="@string/sample_device_admin_description"-->
+                  <!--android:permission="android.permission.BIND_DEVICE_ADMIN">-->
+            <!--<meta-data android:name="android.app.device_admin"-->
+                       <!--android:resource="@xml/device_admin_sample" />-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.app.action.DEVICE_ADMIN_ENABLED" />-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
+
+
     </application>
 
 
