--- a/Android/Remo/AndroidManifest.xml
+++ b/Android/Remo/AndroidManifest.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.remo">
-    <uses-sdk android:minSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="26"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <!--<uses-permission android:name="android.permission.SEND_SMS"/>-->
+
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+
 
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -44,6 +52,18 @@
             android:name=".Connections.BRConnectivity"
             android:enabled="true"
             android:exported="true"></receiver>
+
+
+        <receiver android:name=".Connections.BRSMS"
+
+                  android:enabled="true"
+                  android:exported="true" android:permission="android.permission.BROADCAST_SMS">
+
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+
+        </receiver>
 
 
         <!--<receiver android:name="co BRDeviceAdmin"-->
